<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.game.tim.theverthingame.GameScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_btn"
        android:id="@+id/timerButton"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:textAlignment="center"
        android:id="@+id/timerTV"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:singleLine="true"
        android:textSize="35sp"
        android:layout_marginTop="14dp"
        />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timerButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team1"
            android:id="@+id/team1TV"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="22sp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="5dp"
            android:maxLength="12"
            android:minWidth="100dp"

            android:textColor="#139000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team1rnd1"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team1rnd2"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team1rnd3"
            android:layout_row="1"
            android:layout_column="3"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team1tot"
            android:layout_row="1"
            android:layout_column="10"
            android:textSize="22sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team2"
            android:id="@+id/team2TV"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="22sp"
            android:layout_marginEnd="4dp"
            android:maxLength="12"
            android:minWidth="100dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rnd1"
            android:id="@+id/rnd1TV"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rnsd2"
            android:id="@+id/rnd2TV"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rnd3"
            android:id="@+id/rnd3"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2rnd1"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2rnd2"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2rnd3"
            android:layout_row="2"
            android:layout_column="3"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team2Total"
            android:layout_row="2"
            android:layout_column="10"
            android:textSize="22sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tot"
            android:id="@+id/textView9"
            android:layout_row="0"
            android:layout_column="10" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rmvPnt"
        android:textColor="#ffffff"
        android:id="@+id/rmvPointBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/timerButton"
        android:background="#9a0000"
        android:layout_alignEnd="@+id/timerButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPnt"
        android:id="@+id/addPointBtn"
        android:background="#06a600"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/rmvPointBtn"
        android:layout_alignStart="@+id/rmvPointBtn"
        android:layout_alignEnd="@+id/rmvPointBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resTime"
        android:id="@+id/eesumeTime"
        android:visibility="invisible"

        android:layout_above="@+id/gridLayout"
        android:layout_alignStart="@+id/timerButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penBtn"
        android:id="@+id/penaltyBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/rmvPointBtn"
        android:layout_toEndOf="@+id/eesumeTime"
        android:layout_alignTop="@+id/addPointBtn" />

</RelativeLayout>
